2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Don't pass -c SHOW_MENU=1
	to texi2any.

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	SHOW_MENU=1 for TEXI2HTML=1.

	* tp/Texinfo/Convert/HTML.pm (_set_variables_texi2html):
	Set SHOW_MENU to 1.

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Set MENU_ENTRY_COLON back to :.
	
	* tp/Texinfo/Convert/HTML.pm (%defaults):
	Change 'MENU_ENTRY_COLON' back from '' to ':'.

	If somebody specifies '-c SHOW_MENU=1', they probably
	want something that looks more like the Info output.
	':' was the default setting until 2019-02-10.

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Don't add menus in HTML.pm.
	
	* tp/Texinfo/Convert/HTML.pm (_convert): Remove code to add a menu
	to a node where there wasn't one.

	Since SHOW_MENU now has the value section-toc by default,
	a menu is not necessary in a node for inferior nodes to be
	accessible.  If adding menus is wanted as a feature for HTML,
	this may be better done in non-format-specific code (e.g. with
	TREE_TRANSFORMATIONS).

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Warning only for menu missing node.

	* tp/Texinfo/Structuring.pm (nodes_tree): Use a warning instead
	of an error for the message, "node `%s' lacks menu item for
	`%s' despite being its Up target".

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	No automatic menu if node has explicit pointers.

	* tp/Texinfo/Convert/Plaintext.pm (_convert)
	<sectioning commands>:
	Check if extra arguments were given to @node, and if they
	were, do not generate a menu if one was missing.

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/htmlxref.cnf (tar): Fix.

2020-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	class="texi-manual"

	* tp/Texinfo/Convert/HTML.pm
	(_convert_xref_commands): Set class="texi-manual" on links
	to other Texinfo manuals.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	Manual revisions.
