@@ -296,3 +296,12 @@ nested_formats.texi:356: warning: @menu in invalid context (possibly involving @
 nested_formats.texi:356: command @bullet not accepting argument in brace should not be on @table line (possibly involving @mymacro)
 nested_formats.texi:356: warning: @menu in invalid context (possibly involving @mymacro)
 nested_formats.texi:356: command @bullet not accepting argument in brace should not be on @table line (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:233: warning: multiple @menu (possibly involving @mymacro)
+nested_formats.texi:236: warning: multiple @menu
